# MaxFlowPresentation

./: .gitignore  CMakeLists.txt  MaxFlowAlgorithmPresentaion.pro  application.cpp  application.h  conanfile.txt  controller.cpp  controller.h  drawer.cpp  drawer.h  drawer_setup.h  main.cpp  mainwindow.cpp  mainwindow.ui  max_flow.cpp  max_flow.h  observer_pattern.h  palette.h  readme.md  view.cpp  view.h
Interface/: drawer.cpp  drawer.h  drawer_helper.cpp  drawer_helper.h  geom_model.cpp  geom_model.h  interface_messages.cpp  interface_messages.h  mainwindow.cpp  mainwindow.h  view.cpp  view.h
Kernel/: controller.cpp  controller.h  kernel_messages.cpp  kernel_messages.h  max_flow.cpp  max_flow.h  mvc_messages.cpp  mvc_messages.h  view.cpp  view.h
Tests/: test_max_flow.cpp  test_observer_pattern.cpp
